[project]
name = "pm-drop-common-core"
version = "0.1.0"
description = "Common core foundation for Packed Mask Dropout experiments"
requires-python = ">=3.9"

[project.dependencies]
torch = ">=2.0.0"
transformers = ">=4.34.0"
datasets = ">=2.14.0"
scikit-learn = ">=1.1.3"
pyyaml = ">=6.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
pandas = ">=2.0.3"
rich = ">=13.5.2"
tqdm = ">=4.66.0"